src/styles/main.scss
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: 'Raleway', sans-serif;
}

body {
  
  padding: 0px 20px 0px;
  background-color:whitesmoke;
  color: black;
  height: 100vh
}

body a {
  text-decoration: none;
  color: black
}

body a:hover {
  color: rgb(136, 135, 135);


}

body p {
  font-size: 3vh;
line-height: 1.6;

}

body h1 {
  font-weight: lighter;
  font-size: 5vh;
  text-align: center;
  margin-bottom: 2vh;
}

body h3 {
  font-weight: lighter;
  font-size: 3vh;
  text-align: center;
}


// PROJECT CONTAINERS

.lyricle {
  display: flex;
  width: 30vw;
  height: 250vh;
  margin: 5vh;
}



.lyricle-text{
  display: flex;
  width: 30vw;
  height: 250vh;
  
}



.discoverly {
  display: flex;
  width: 30vw;
  height: 250vh;
  margin: 5vh;
}

.discoverly-text {
  display: flex;
  width: 30vw;
  height: 250vh
}

.cryptmocash {
  display: flex;
  width: 30vw;
  height: 250vh;
  margin: 5vh;
}

.cryptmocash-text {
  display: flex;
  width: 30vw;
  height: 250vh
}


.seipermarioman {
  display: flex;
  width: 30vw;
  height: 250vh;
  margin: 5vh;
}

.seipermarioman-text {
  display: flex;
  width: 30vw;
  height: 250vh
}
// PROJECT TEXT 

.project-title {
  margin: 5vw 0 -5vw ;
}

.project-text {
  padding-right: 45px;
  margin-bottom: 145vh;
 padding: 20px 20px 0 20px;
  h2 {
 font-size: 10vh;
 padding: 50px 0 15px 0 
}
}



.project-text h2:hover {
  color:white;
  transition: 1s;
  transition-delay: .3s;
  font-size: 10vh;
  padding: 50px 0 15px 0
}







// .navbar-wrapper {
//   display: flex;
//   justify-content: center;
//   position: relative
// }


section {
  padding: 40px 0 0 0;
}

/*! locomotive-scroll v4.1.3 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
html.has-scroll-smooth {
  overflow: hidden;
}

html.has-scroll-dragging {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.has-scroll-smooth body {
  overflow: hidden;
}

.has-scroll-smooth [data-scroll-container] {
  min-height: 100vh;
}

[data-scroll-direction="horizontal"] [data-scroll-container] {
  height: 100vh;
  display: inline-block;
  white-space: nowrap;
}

[data-scroll-direction="horizontal"] [data-scroll-section] {
  display: inline-block;
  vertical-align: top;
  white-space: nowrap;
  height: 100%;
}

.c-scrollbar {
  position: absolute;
  right: 0;
  top: 0;
  width: 11px;
  height: 100%;
  transform-origin: center right;
  transition: transform 0.3s, opacity 0.3s;
  opacity: 0;
}

.c-scrollbar:hover {
  transform: scaleX(1.45);
}

.c-scrollbar:hover,
.has-scroll-scrolling .c-scrollbar,
.has-scroll-dragging .c-scrollbar {
  opacity: 1;
}

[data-scroll-direction="horizontal"] .c-scrollbar {
  width: 100%;
  height: 10px;
  top: auto;
  bottom: 0;
  transform: scaleY(1);
}

[data-scroll-direction="horizontal"] .c-scrollbar:hover {
  transform: scaleY(1.3);
}

.c-scrollbar_thumb {
  position: absolute;
  top: 0;
  right: 0;
  background-color: black;
  opacity: 0.5;
  width: 7px;
  border-radius: 10px;
  margin: 2px;
  cursor: -webkit-grab;
  cursor: grab;
}

.has-scroll-dragging .c-scrollbar_thumb {
  cursor: -webkit-grabbing;
  cursor: grabbing;
}

[data-scroll-direction="horizontal"] .c-scrollbar_thumb {
  right: auto;
  bottom: 0;
}


//Navbar
.navbar-wrapper {
  // background-color: lightgrey;
  margin-top: -10px;
    width: 100%;
  a {
    color: black;
    text-decoration: none;
    font-size: 15px;
    
  }
}

.navbar-items {
  
  display: flex;
  justify-content: space-around;
  align-items: center;
  list-style-type: none;
  height: 5vh;
  
  a {
  color: black;
  text-transform: uppercase;
  text-decoration: none;
  letter-spacing: 0.15em;

  display: inline-block;
  padding: 15px 20px;
  position: relative;
}}

.navbar-items a:after {
  background: none repeat scroll 0 0 transparent;
  bottom: 0;
  content: "";
  display: block;
  height: 2px;
  left: 50%;
  position: absolute;
  background: grey;
  transition: width 0.3s ease 0s, left 0.3s ease 0s;
  width: 0;
}

a:hover:after {
  width: 100%;
  left: 0;
}

@media screen and (max-height: 300px) {
  ul {
    margin-top: 40px;
  }
}



//Hero

.hero-section {

  color: black;
 height: 100vh;
  font-size: 6vh;
  text-align: center
  }
  .fadeInUp1{animation: fadeInDown 1s ease backwards;
  animation-delay: 0s;}
  .fadeInUp2 {
  animation: fadeIn 1.5s ease backwards;
  animation-delay: .9s;
  }
  .fadeInUp3 {
  animation: fadeInUp 1.1s ease backwards;
  animation-delay: .9s;
  }
    .fadeInUp4 {
      animation: fadeInDown 1.1s ease backwards;
      animation-delay: .7s;
      color: red;
    }

.hero-section h1 {
  font-weight:400;
      font-size: 10vw;
      
    }

#ashley-gyngell-avatar {
  height: 40vh;
}

.hero-section h2 {
  font-size: 5vh;
}

// SKILLS 



.skills-wrapper p {
  word-spacing: 0.7rem;
}

.skills-wrapper h2 {
  font-size: 25px;
  margin-top: 1vw;
}

.skills-grid {
  display: flexbox;
  flex-wrap: wrap;
  column-count: 5;
  padding: 0 25vw;
  text-align: center;
  font-size: 8vh;
}

.skill:hover {
  
      transform: scale(1.11);
      transition: 0.1s;
}

  
  .devicon-html5-plain:hover {  
  color: #E54D26;
  transition: 0.15s;    
}

.devicon-css3-plain:hover {
  color: #3C8FC6;
  transition: 0.15s;
}

.devicon-javascript-plain:hover {
  color: #F0DB4F;
  transition: 0.15s;
}

.devicon-react-original:hover {
  color: #61D9FB;
  transition: 0.15s;
}

.devicon-python-plain:hover {
  color: #FFD846;
  transition: 0.15s;
}

.devicon-django-plain:hover {
  color: #092E20;
  transition: 0.15s;
}

.devicon-postgresql-plain:hover {
  color: #336890;
  transition: 0.15s;
}

.devicon-nodejs-plain:hover {
  color: #83CD29;
  transition: 0.15s;
}

.devicon-npm-original-wordmark:hover {
  color: #CB3837;
  transition: 0.15s;
}

.devicon-express-original:hover {
  color: #444444;
  transition: 0.15s;
}

.devicon-mongodb-plain:hover {
  color: #4FAA41;
  transition: 0.15s;
}



.devicon-github-original:hover {
  color: #24292F;
  transition: 0.15s;
}

.devicon-heroku-original:hover {
  color: #6762A6;
  transition: 0.15s;
}

.devicon-vscode-plain:hover {
  color: #3C99D4;
  transition: 0.15s;
}

.devicon-git-plain:hover {
  color: #F34E29;
  transition: 0.15s;
}

.devicon-sass-plain:hover {
  color: #CC6699;
  transition: 0.15s;
}
.devicon-bulma-plain:hover {
color: #0AD0B2;
  transition: 0.15s;
}

.devicon-slack-plain:hover {
  color: #4A154B;
    transition: 0.15s;
    
}

.devicon-trello-plain:hover {
  color: #2683FF;
  transition: 0.15s}

.iconify:hover {
  color: #38AEBA;
    transition: 0.15s;
}



// About



#about p { 
  line-height: 1.6;
  text-align: center;
  padding: 30px 10vw 0 10vw;
}

.about-wrapper {
  padding: 0 0 60px 0
}

// Interests

.interests-text {
  padding: 0 15vh;
    display: grid;
    justify-content: center;
    gap: 8vh;
    grid-template-columns: 20% 20% 20% 20%;
    text-align: center;
}

// Experience



.experience-text {
  padding: 0 7vh;
  display: grid;
  justify-content: center;
  gap: 10vh;
  grid-template-columns: 30% 30% 30%;
  text-align: center;
}



.experience-text h2 {
  padding-top: 2vh;
  font-size: 4.8vh;
  text-transform: uppercase;
}

.experience-text h3 {
  font-size: 2vh;
  text-transform: uppercase;
}

.experience-text h4 {
  padding-bottom: 5vh;
  font-size: 2.6vh;
  font-weight: 200;
  text-transform: uppercase;
}

.experience-wrapper p {
  padding-bottom: 18px;
}


#experience-logo {
  height: 5vh;
 
}


// Contact
.contact-wrapper {
  text-align: center;
  height: 30vh;
.contact-icons {
    display: flex;
    width: 25%;
    justify-content: space-around;
    margin:  auto 
  }
}

.contact-icons a:hover {
  transform: scale(1.2);
    transition: 0.1s;
}

//SideBar With Links


.social-links {
  position: fixed;
  
  bottom: 5px;
  left: 8px;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 30px;
}

.social-links a{
  padding: 3px 0 3px 0;
}
.social-links a:hover {
  transform: scale(1.2);
  transition: 0.15s;
}


// Footer
.footer {
  text-align: center;
  margin: -60px 0 10px 0;
}


@keyframes fadeIn {
  0% {
    transform: translate(0px, 0px);
    opacity: 0;
  }

  100% {
    transform: translate(0px, 0);
    opacity: 1;
  }
}


@keyframes fadeInUp{0% {
    transform: translate(0px, 100px);
    opacity: 0;
  }

  100% {
    transform: translate(0px, 0);
    opacity: 1;
  }
}

@keyframes fadeInDown {
  0% {
    transform: translate(0px, -100px,);
    opacity: 0;
  }

  100% {
    transform: translate(0px, 0);
    opacity: 1;
  }
}





#lyricle-screenshot-ipad {
  position: absolute ;
    top: -15vw;
      right: -59vw;
      height: 40vw;
      max-height: fit-content;
      width: auto;
      
}

#lyricle-screenshot-mac {
position: absolute;
    top: 45vw;
    right: -22vw;
    height: 42vw;
    max-height: fit-content;
    width: auto;
    
}

#lyricle-screenshot-phone {
  position: absolute;
    top: 40vw;
    right: -63vw;
    height: 47vw;
    max-height: fit-content;
    width: auto;
}

#discoverly-screenshot-ipad {
  position: absolute;
  top: 25vw;
  right: -54vw;
  height: 37vw;
  max-height: fit-content;
  width: auto;

}

#discoverly-screenshot-ipad2 {
  position: absolute;
  top: 50vw;
  right: -61vw;
  height: 28vw;
  max-height: fit-content;
  width: auto;

}

#discoverly-screenshot-phone {
  position: absolute;
  top: 40vw;
  right: -58vw;
  height: 35vw;
  max-height: fit-content;
  width: auto;
}

#cryptmocash-screenshot-ipad {
  position: absolute;
  top: 65vh;
  right: -60vw;
  height: 30vw;
  max-height: fit-content;
  width: auto;

}

#cryptmocash-screenshot-ipad2 {
  position: absolute;
  top: 41vw;
  right: -56vw;
  height: 40vw;
  max-height: fit-content;
  width: auto;

}

#cryptmocash-screenshot-iphone {
  position: absolute;
  top: -30vw;
  right: -62vw;
  height: 38vw;
  max-height: fit-content;
  width: auto;
}

#seipermarioman-screenshot-mac1 {
  position: absolute;
  top: 58vw;
right: -64vw;
  height: 28vw;
  max-height: fit-content;
  width: auto;
}



#seipermarioman-screenshot-mac2 {
  position: absolute;
    top: 37vw;
    right: -50vw;
    height: 30vw;
    max-height: fit-content;
    width: auto;
}



.image-pop {
  height: 100vh
}
.image-pop1 {
  height: 100vh
}



.project-text p {
width: 30vw
}


.project-text h1 {
  text-transform: uppercase;
  display: inline-block;
  padding: 0 0 20px 0
}



.project-text h2 a:hover {
  color: white
  ;
  
}


.project-github {
  position: absolute;
}
.project-github:hover {
  
transform: scale(1.1);
  transition: 0.15s;
}

.project-text h2 {
  color: black;
  text-transform: uppercase;
  text-decoration: none;
 
  
  
}

